--- a/components/CaseStudiesCommon/ProjectIdea/styles.module.scss
+++ b/components/CaseStudiesCommon/ProjectIdea/styles.module.scss
@@ -485,6 +485,19 @@
     padding-bottom: 0;
 
     .descriptionContainer {
+      @include desktop {
+        margin-left: 40px;
+      }
+
+      @include tablet {
+        margin-left: 60px;
+      }
+
+      @include phone {
+        margin-left: 0;
+        margin-bottom: 0;
+      }
+
       .descriptionIntro {
         .description {
           & > p {
@@ -500,6 +513,10 @@
 
     & > div {
       margin-top: 80px;
+
+      @include phone {
+        margin-top: 40px;
+      }
     }
   }
 }
